--- a/project01/index.html
+++ b/project01/index.html
@@ -2,9 +2,80 @@
 		"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-	<title></title>
+	<title>Index</title>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	<style type="text/css">
+		body {
+			margin: 0;padding: 0;
+			background: #c8b6a1;
+		}
+		p {
+			color: #f5f5f5;
+		}
+		table {
+			margin: 100px auto;
+			width:600px;
+			background: red;
+		}
+		td {
+			text-align: center;
+		}
+		.tabselect {
+			line-height: 5px;
+			background-color: white;
+		}
+		.tabselected {
+			line-height: 5px;
+			background-color: #ffc0cb;
+		}
+		#menuHead td {
+			width: 20%;
+		}
+	</style>
+	<script type="text/javascript">
+		var menu={home:1,profile:2,item01:3,item02:4,item03:5};
+		function tabselected(idx,remove){
+			if(document.getElementById('menu').value=="" || document.getElementById('menu').value!=idx)
+			{
+				$('.tabselected').first().attr('class','tabselect');
+				if(remove){
+					$('.tabselected').first().attr('class','tabselect');
+				}
+				else{
+					$('.tabselect').slice(menu[idx]-1,menu[idx]).attr('class','tabselected');
+				}
+				document.getElementById('menu').value=idx;
+			}
+		}
+		$(document).ready(function(){
+			$('#home').hover(function(){tabselected(this.id)},function(){tabselected(this.id,true)});
+			$('#profile').hover(function(){tabselected(this.id)},function(){tabselected(this.id,true)});
+			$('#item01').hover(function(){tabselected(this.id)},function(){tabselected(this.id,true)});
+			$('#item02').hover(function(){tabselected(this.id)},function(){tabselected(this.id,true)});
+			$('#item03').hover(function(){tabselected(this.id)},function(){tabselected(this.id,true)});
+			tabselected('home');
+		});
+	</script>
 </head>
 <body>
-Hello World
+<input type="hidden" id="menu">
+<div id="wraper">
+	<table cellpadding="0" cellspacing="0">
+		<tr id="menuHead">
+			<td id="home" name="home"><p>HOME</p></td>
+			<td id="profile"><p>PROFILE</p></td>
+			<td id="item01"><p>ITEM01</p></td>
+			<td id="item02"><p>ITEM02</p></td>
+			<td id="item03"><p>ITEM03</p></td>
+		</tr>
+		<tr>
+			<td class="tabselect">&nbsp;</td>
+			<td class="tabselect">&nbsp;</td>
+			<td class="tabselect">&nbsp;</td>
+			<td class="tabselect">&nbsp;</td>
+			<td class="tabselect">&nbsp;</td>
+		</tr>
+	</table>
+</div>
 </body>
 </html>
