--- a/project02/js/headerjs.html
+++ b/project02/js/headerjs.html
@@ -8,6 +8,14 @@ function dw(str){
     document.write(str);
 }
 
+function err(){
+    console.log('angry');
+}
+
+function aa(str){
+    alert(str);
+}
+
 function showText(idx){
     dw(lang[idx]);
 }
