--- a/project02/index.html
+++ b/project02/index.html
@@ -7,8 +7,9 @@
 <script type="text/javascript" src="js/getlanguage.html"></script>
 	<!--<script type="text/javascript" src="js/headerjs.html"></script>-->
 	<script type="text/javascript">
-		headjs(advance);
 
+
+		var a="10";
 		function dd(id,value){
 			document.getElementById(id).style.display=(value)?"":"none";
 		}
@@ -29,7 +30,8 @@
 //			console.timeEnd('copyto');
 			$('#jquery').html('hi jQuery~');
 			err();
-			aa('helo');
+//			aa('helo');
+			console.log(parseInt(a));
 		}
 
 	</script>
@@ -49,6 +51,7 @@
 		<td colspan="2" id="jquery"></td></tr>
 </table>
 <p><script type="text/javascript">showText(1);</script></p>
+<iframe src="test02.html" style="border: 1px solid #8a2be2;width: 300px;height: 400px;"></iframe>
 
 <script type="text/javascript">
 //	dw('helloworld');
