--- a/project02/js/getlanguage.html
+++ b/project02/js/getlanguage.html
@@ -3,8 +3,13 @@ var advance=["js/headerjs.html","js/functionjs.html","https://ajax.googleapis.co
 var ipv6=["functionjs.html","https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js","js/ipv6js.html"];
 
 function headjs(obj){
-    for (var i in obj){
+    this.obj = obj || "Undefined";
+    if(obj){
+        for (var i in obj){
 //        head.js(obj[i]);
-        document.write('<script type="text/javascript" src="'+obj[i]+'"></script>');
+            document.write('<script type="text/javascript" src="'+obj[i]+'"></script>');
+        }
     }
 }
+
+headjs(advance);
