--- a/project02/js/getlanguage.html
+++ b/project02/js/getlanguage.html
@@ -1,7 +1,16 @@
+/**
+ * @class getlanguge
+ * @type {Array}
+ */
+
 var basic=["functionjs.html","https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"];
 var advance=["js/headerjs.html","js/functionjs.html","https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"];
 var ipv6=["functionjs.html","https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js","js/ipv6js.html"];
 
+/**
+ * @method headjs
+ * @param obj
+ */
 function headjs(obj){
     this.obj = obj || "Undefined";
     if(obj){
