--- a/project02/js/headerjs.html
+++ b/project02/js/headerjs.html
@@ -1,9 +1,13 @@
+/**
+ * @module js_headerjs.html
+ */
 
 /**
  *
  * @type {String}
  */
 var default_language="uk.js";
+
 /**
  *
  * @type {Object}
@@ -14,13 +18,14 @@ var lang={0:"",
 };
 
 /**
+ * @method dw
  * @param str
  */
 function dw(str){
     document.write(str);
 }
 /**
- *
+ * @method err
  * @param log
  */
 function err(log){
@@ -30,14 +35,14 @@ function err(log){
     console.warn('==============Warning=============');
 }
 /**
- *
+ * @method aa
  * @param str
  */
 function aa(str){
     alert(str);
 }
 /**
- *
+ * @method showText
  * @param idx
  */
 function showText(idx){
